# icu4unity

./: LICENSE.md  README.md  SConstruct
asset/Assets/Plugins/icu4unity/: ICU4ULineBreaker.cs  ICU4UText.cs  ICU4Unity.cs  ICU4UnityWordBreaker.cs
asset/Assets/Plugins/icu4unity/Editor/: ICU4USetPropertyDrawer.cs
asset/Assets/Plugins/icu4unity/Supporting/: ICU4USetPropertyAttribute.cs
asset/Assets/Plugins/icu4unity/macOS/icu4unity.bundle/Contents/: Info.plist
asset/Assets/Plugins/icu4unity/macOS/icu4unity.bundle/Contents/MacOS/: icu4unity
plugin/: .gitignore  CMakeLists.txt  build_android.bat  build_windows.bat  clean_android.bat  clean_windows.bat  make_android.bat  make_windows.bat
plugin/cmake/: ios.toolchain.cmake
plugin/src/icu4c-63_1/: .gitignore  README.md
plugin/src/icu4c-63_1/source/common/: brkiter.cpp
plugin/src/icu4c-63_1/source/common/unicode/: brkiter.h  ubrk.h
plugin/src/icu4c-63_1/source/data/brkitr/: brkfiles.mk
plugin/src/icu4c-63_1/source/data/misc/: miscfiles.mk
plugin/src/icu4unity/: icu4unity.cpp  unity_interface.h
src/: unity_interface.h
